terminada presentación.html

--- a/app-muiscas/www/saludos/html/presentacion.html
+++ b/app-muiscas/www/saludos/html/presentacion.html
@@ -24,7 +24,7 @@
         <div class="burbuja izquierda">
             <div class="contexto">
                 <p class="texto">Choá!!</p>
-                <p class="texto">Vamos a aprander como pesentarnos en muysccubun, para empezar te conteremos que en la lengua muisca el verbo va al final de la oración, por tal motivo nuestra primera frase se compondra de tres partes:</p>
+                <p class="texto">Vamos a aprander como pesentarnos en muysccubun, para empezar te contaremos que en la lengua muisca el verbo va al final de la oración, por tal motivo nuestra primera frase se compondrá de tres partes:</p>
                 <p class="opciones negro" onclick="presentacion('p1')">Continuar</p>
             </div>
         </div>
@@ -43,7 +43,7 @@
             <div class="contexto">
                 <b class="texto">2."Nuestro nombre"</b>
                 <p class="texto">En la mitad de nuestra frase de presentación encontramos nuestro nombre, para esta frase de ejemplo tomaremos el nombre de Diana Garibello.</p>
-                <p class="texto">Entonces hasta este momento tenemos "zehyca Diana Garibello" que en español traduciría: "Mi nombre Diana Garibello"</p>
+                <p class="texto">Entonces, hasta este momento tenemos "zehyca Diana Garibello" que en español traduciría: "Mi nombre Diana Garibello"</p>
                 <p class="opciones negro" onclick="presentacion('p3')">Continuar</p>
             </div>
         </div>
@@ -52,7 +52,7 @@
         <div class="burbuja derecha">
             <div class="contexto">
                 <b class="texto" onclick="digito('gue')">3."Gue"</b>
-                <p class="texto">Esta es la construcción verbal utilizada en muysca para "es" o "soy" y el ultimo componenete de nuestra frase de presentación, lo que quiere decir que para decir "mi nombre es ~~" decimos:</p>
+                <p class="texto">Esta es la construcción verbal utilizada en muysca para "es" o "soy" y el último componenete de nuestra frase de presentación, lo que quiere decir que para decir "mi nombre es ~~" decimos:</p>
                 <p class="opciones negro" onclick="presentacion('p4')">Continuar</p>
             </div>
         </div>
@@ -79,7 +79,7 @@
         <div class="burbuja izquierda">
             <div class="contexto">
                 <p class="texto">Ipqua!!</p>
-                <p class="texto">Ahora vamos a aprander como decir donde vivimos en muysccubun, nuesta segunda frase tambien se divide en tres partes:</p>
+                <p class="texto">Ahora vamos a aprander como decir donde vivimos en muysccubun, nuestra segunda frase también se divide en tres partes:</p>
                 <p class="opciones negro" onclick="presentacion('p7')">Continuar</p>
             </div>
         </div>
@@ -87,8 +87,8 @@
     <div id="p7" class="contizquierda">
         <div class="burbuja izquierda">
             <div class="contexto">
-                <b class="texto">1."Cha"</b>
-                <p class="texto">esta exprecion en español significa "nativo".</p>
+                <b class="texto" onclick="digito('cha')">1."Cha"</b>
+                <p class="texto">esta expresión en español significa "nativo".</p>
                 <p class="opciones negro" onclick="presentacion('p8')">Continuar</p>
             </div>
         </div>
@@ -96,8 +96,8 @@
     <div id="p8" class="contderecha">
         <div class="burbuja derecha">
             <div class="contexto">
-                <b class="texto" onclick="digito('gue')">2."El lugar donde vives"</b>
-                <p class="texto">En la segunda parte denuestra oración va el lugar donde vivimo es "cha Suba" que literalmente traduciría:"nativo Suba"</p>
+                <b class="texto">2."El lugar donde vives"</b>
+                <p class="texto">En la segunda parte de nuestra oración va el lugar donde vivimos es "cha Suba" que literalmente traduciría:"nativo Suba"</p>
                 <p class="opciones negro" onclick="presentacion('p9')">Continuar</p>
             </div>
         </div>
@@ -106,7 +106,7 @@
         <div class="burbuja derecha">
             <div class="contexto">
                 <b class="texto" onclick="digito('gue')">3."gue"</b>
-                <p class="texto">Esta es la construcción verbal utilizada en muysca para "es" o "soy" y el ultimo componenete de nuestra segunda frase, lo que quiere decir que para decir "soy de ~~" decimos:</p>
+                <p class="texto">Esta es la construcción verbal utilizada en muysca para "es" o "soy" y el último componenete de nuestra segunda frase, lo que quiere decir que para decir "soy de ~~" decimos:</p>
                 <p class="opciones negro" onclick="presentacion('p10')">Continuar</p>
             </div>
         </div>
@@ -114,8 +114,8 @@
     <div id="p10" class="contizquierda">
         <div class="burbuja izquierda">
             <div class="contexto">
-                <b class="texto" onclick="digito('zehycague')"><p class="noseve">*****</p>Cha Suba gue</b>
-                <br>
+                <b class="texto" onclick="digito('chague')"><p class="noseve">*****</p>Cha Suba gue</b>
+                <img class="imagenchat" src="../imagenes/suba.png">
                 <p class="opciones negro" onclick="presentacion('p11');presentacion('subin');">Continuar</p>
             </div>
         </div>
@@ -123,11 +123,64 @@
     <div id="p11" class="contderecha">
         <div class="burbuja derecha">
             <div class="contexto">
-                <p class="texto">Ya sabes como decir el lugar de donde eres en muysccubun, ahora queremos que lo practiques, por favor escribe lo que aprendimos.</p>
+                <p class="texto">Ya sabes como decir el lugar de donde eres en muysccubun, ahora queremos que lo practiques, por favor escribe lo que aprendimos, utilizando el lugar.</p>
             </div>
         </div>
     </div>
     <div id="segundarespuesta">
+    </div>
+    <div id="p12" class="contizquierda">
+        <div class="burbuja izquierda">
+            <div class="contexto">
+                <p class="texto">Ipqua!!</p>
+                <p class="texto">Ya tenemos las dos frases que construiran nuestra presentación en lengua muysca ahora vamos a aprender a conectarlas</p>
+                <p class="opciones negro" onclick="presentacion('p13')">Continuar</p>
+            </div>
+        </div>
+    </div>
+    <div id="p13" class="contderecha">
+        <div class="burbuja derecha">
+            <div class="contexto">
+                <b class="texto" onclick="digito('nga')">Nga</b>
+                <p class="texto">Será la palabra enmuysca que nos conectara las dos frases que aprendimos</p>
+                <p class="opciones negro" onclick="presentacion('p14')">Continuar</p>
+            </div>
+        </div>
+    </div>
+    <div id="p14" class="contizquierda">
+        <div class="burbuja izquierda">
+            <div class="contexto">
+                <p class="texto">Zehyca Fernando Fiquitiva gue nga cha Suba gue</p>
+                <p class="opciones negro" onclick="presentacion('p15');presentacion('subinga');">Continuar</p>
+            </div>
+        </div>
+    </div>
+    <div id="p15" class="contderecha">
+        <div class="burbuja derecha">
+            <div class="contexto">
+                <p class="texto">Para practicar te proponemos que nos compartas tu presentación escribiendo tu nombre y lugar de procedencia</p>
+            </div>
+        </div>
+    </div>
+    <div id="tercerarespuesta">
+    </div>
+    <div id="p16" class="contizquierda">
+        <div class="burbuja izquierda">
+            <div class="contexto">
+                <b class="texto">Ipqua!!!</b>
+                <p class="texto">Te felicitamos por tu avance, como dato adicional te contamos que en muysca para preguntar por el nombre de otra persona decimos:</p>
+                <p class="texto">Ipqua ahyca<p>
+                <p class="opciones negro" onclick="presentacion('p17')">Continuar</p>
+            </div>
+        </div>
+    </div>
+    <div id="p17" class="contderecha">
+        <div class="burbuja derecha">
+            <div class="contexto">
+                <p class="texto">Ahora te invitamos a pasar a nuestra proxima lección</p>
+                <a class="opciones negro" href="agrademientos.html" >Agrademientos</a>
+            </div>
+        </div>
     </div>
 </div>
 <div id="sub" class="subministrar">
@@ -138,8 +191,15 @@
     <input id="getcha" onkeyup="cha(event)" class="inputexto" type="text">
     <p id="boton" onclick="cha(event)" class="enter">&#8592;<p>
 </div>
+<div id="subinga" class="subministrar">
+    <input id="getnga" onkeyup="nga(event)" class="inputexto" type="text">
+    <p id="boton" onclick="nga(event)" class="enter">&#8592;<p>
+</div>
 <audio id="zehyca" src="../audio/zehyca.ogg"></audio>
 <audio id="gue" src="../audio/gue.ogg"></audio>
 <audio id="zehycague" src="../audio/zehycague.ogg"></audio>
+<audio id="nga" src="../audio/nga.ogg"></audio>
+<audio id="cha" src="../audio/cha.ogg"></audio>
+<audio id="chague" src="../audio/chague.ogg"></audio>
 </body>
 </html>
