en la estrofa 8 coloque el sapo abajo trate de darle un efecto sinéxito, se le coloca trasparencia a laimagen, se creo otro gif arcoiris mas pequeño para que mejorará el sobrante en la pantalla, también sin exito, se volvió acolocar el gif arcoiris que estaba. en el css cambie la clase -todos los animales,colocando más arriba con una nota,para tratar de cuadrar los personajes en otro momento

--- a/app-muiscas/www/rondadecolores/html/estrofa8.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa8.html
@@ -31,11 +31,10 @@
 
 <h1 class="estrofa8">Ezhinte, regálame tus colores <br>para pintar...<br>El Sapo...Zihita </h1>
 <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
-<div id="buho" class="inicio gris">    
-	
-    <img class="buho1" onclick="efectos('buho','final'); audio('pista')" src="../imagenes/rana.png">
+
+    <img id="ranasaltadora" class="rana1" onclick="rana('ranasaltadora','movimiento1','movimiento2','movimiento3','movimiento4','movimiento5'); audio('pista')" src="../imagenes/rana.png">
     
-</div>
+
 
 <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
 
