--- a/app-muiscas/www/numeros/html/informacion.html
+++ b/app-muiscas/www/numeros/html/informacion.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -18,7 +18,7 @@
     <a href="../numerospr.html">
     <img class="atrasmenu" src="../../img/atrasmenu.svg">
     </a>
-    <h1 id="titulotunjo"> ¿Sabías Que? </h1>
+    <h1 id="titulotunjo"> ¿Sabías Qué? </h1>
 </div>
 
 <div class = "tunjocuerpo" >
