cambie clases en cssronda de colores -todoslosanimales-todoslosanimalesim- por clases-animalesdetierra-aves

--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa7.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa7.html
@@ -29,8 +29,8 @@
 <a href="muyscaestrofa8.html">
 <img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
-<div id="buho" class="inicio gris">    
-	<img class="buho1" onclick="efectos('buho','final')" src="../imagenes/buho2.GIF">
+<div id="buho" class="iniciop gris">    
+	<img class="buho1" onclick="efectos('buho','finalp'); audio('pista')" src="../imagenes/buho2.GIF">
 </div>
     
 <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
