--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa8.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa8.html
@@ -29,9 +29,7 @@
 </a>
 
 <h1 class="estrofa8">Ezhinte, mbique <br>Choc Zbquyqua...<br>Chibchihiua...Zihita</h1>
-<div id="buho" class="inicio gris">    
-	<img class="buho1" onclick="efectos('buho','final')" src="../imagenes/gifbuho.gif">
-</div>
+<img id="ranasaltadora" class="rana1" onclick="rana('ranasaltadora','movimiento1','movimiento2','movimiento3','movimiento4','movimiento5'); audio('pista')" src="../imagenes/rana.png">
     
 <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
 
