--- a/app-muiscas/www/rondadecolores/html/estrofa2.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa2.html
@@ -30,9 +30,10 @@
 <img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
 
-    <img  class="nina" src="../imagenes/nina.png" onclick=" audio('pista')">
-    <img  class="planeta" src="../imagenes/latierra3.png">   
-    <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
+    <img  class="nina" src="../imagenes/nina.png">
+<img  class="planeta" src="../imagenes/latierra3.png">   
+<img  class="arcoiris" src="../imagenes/arcoiris5.gif">
+    
 <a href="../rondadecolores.html">
     <img  class="iconoinicio" src="../imagenes/iconoinicio.gif">
 </a>
