--- a/app-muiscas/www/rondadecolores/html/muyscaestrofa9.html
+++ b/app-muiscas/www/rondadecolores/html/muyscaestrofa9.html
@@ -20,16 +20,33 @@
         <h1>Atrás</h1>
     </a>
 </div>
+    
+ <img  class="nina9" src="../imagenes/nina.png" onclick=" audio('pista')">
+    <img  class="mundo" src="../imagenes/latierra3.png">   
+    <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
+    <div>    
+	<img class="caballoterrestre"  src="../imagenes/caballo.gif">
+</div>
+<div>    
+	<img class="ave"  src="../imagenes/colibriderecha.gif">
+    <img class="ave2"  src="../imagenes/colibri2.gif">
+    <img class="ave"  src="../imagenes/colibriderecha.gif">
+</div>
+<div >    
+	<img class="terrestres"  src="../imagenes/serpiente.gif">
+</div>
+<div>    
+	<img class="buho9"src="../imagenes/buho2.GIF">
+</div>
+
+    <div>    
+	<img class="papagayo9"src="../imagenes/papagayo.gif">
+</div>
+   <img class="rana9"src="../imagenes/rana.png">
 
 
 <a href="muyscaestrofa8.html">
-    <div class="todoslosanimales">
-        <img  src="../imagenes/buho2.GIF">
-        <img  src="../imagenes/caballo.gif">
-        <img  src="../imagenes/colibri.gif">
-        <img  src="../imagenes/papagayo.gif">
-        <img  src="../imagenes/serpiente1.gif">
-    </div>
+   
 <img  class="icono izquierda" src="../imagenes/iconoatras.png">
 </a>
 <a href="muyscaestrofa10.html">
