--- a/app-muiscas/www/informacion/informacion.html
+++ b/app-muiscas/www/informacion/informacion.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -74,9 +74,11 @@ Cuenca, Mususú, Neuque, Chízaba, Chipo, Caipa, Quinche, Cera, Landecho, Lorenz
     <img class="iconoinf" src="logosuba.png">
     <img class="iconoinf" src="bogota.png">
     <img class="iconoinf" src="fundacion.png">
+     <img class="iconoinf" src="AAICC.ai">
 
  </div>
 
 
     </body>
 </html>
+   
