cambie en index de cartilla muysccubun html, ronda por lebique

--- a/app-muiscas/www/index.html
+++ b/app-muiscas/www/index.html
@@ -24,7 +24,7 @@
             <div class="botones derechos arriba color1">
                 <a class="textoicono" href="rondadecolores/rondadecolores.html">
                     <img class="icono" src="img/caralineasbn.svg">
-                    <p>Ronda</p>
+                    <p>Lebique</p>
                 </a>
             </div>
             <div class="botones izquierdos abajo color3">
