unos cambios que no me acuerdo

--- a/app-muiscas/www/index.html
+++ b/app-muiscas/www/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -24,7 +24,7 @@
             <div class="botones derechos arriba color1">
                 <a class="textoicono" href="rondadecolores/rondadecolores.html">
                     <img class="icono" src="img/caralineasbn.svg">
-                    <p>Ronda</p>
+                    <p>Lebique</p>
                 </a>
             </div>
             <div class="botones izquierdos abajo color3">
