--- a/app-muiscas/www/numeros/html/informacion.html
+++ b/app-muiscas/www/numeros/html/informacion.html
@@ -27,7 +27,7 @@
 	</div>
 
 	<div class="textotunjov">
-	   Es importante saber que en la lengua Muysca no existe el numero cero. a continuacion aprenderan los numeros del 1 al 10 y luego los numeros de 11 al 20, se daran cuenta que los numeros desde los 11 indican con la palabra "Quihicha" que significa "pie" en Muysca, como si empezaran a contar con los desdos de los pies.
+	   Es importante saber que en la lengua Muysca no existe el número cero. a continuación aprenderán los números del 1 al 10 y luego los números de 11 al 20, se darán cuenta que los números desde los 11 indican con la palabra "Quihicha" que significa "pie" en Muysca, como si empezarán a contar con los desdos de los pies.
 	</div>
 
 
