--- a/app-muiscas/www/informacion/informacion.html
+++ b/app-muiscas/www/informacion/informacion.html
@@ -75,8 +75,7 @@
     	<p>Nataly  Bulla, Sara Cabiativa, Andrés Bulla, María Angélica 	Cabiativa, Natalia Caita, Andrés Guerrero, Sarah Arévalo, Diana Garibello, Carlos Herrera, Rosa Chisaba, Mabel Niviayo, Mayra Andrea, Yenny Cardozo, Miguel Maecha, David Yopasa, Diego Gómez, Jorge Yopasa Cardenas, Miguel Yopasa, Ivan Niviayo, Gonzalo Cabiativa, Carlos Andrés Rocha, Carlos Alfoso Cobadela, Luz Adriana Murcia</p>
 
 </div>
-<br><br><br>
-<div>
+<div class="instituciones">
     <img class="iconoinf" src="LogoLC.png">
     <img class="iconoinf" src="logobosa.png">
     <img class="iconoinf" src="logosuba.png">
@@ -84,7 +83,6 @@
     <img class="iconoinf" src="fundacion.png">
      <img class="iconoinf" src="logoaso.png">
 </div>
-<br><br><br>
 <div>
     <h1>Licencias</h1>
     <h3>Para los textos, material gráfico y creaciones hechas por la comunidad para esta aplicación</h3>
