--- a/app-muiscas/www/rondadecolores/html/estrofa10.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa10.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -13,7 +13,7 @@
 </head>
 
 <body class="fondoestrofa9">
-    
+
 <div class="mensaje">
     <h1> Por favor gire su dispositivo.</h1>
     <a href="../index.html">
@@ -21,24 +21,19 @@
     </a>
 </div>
     <img  class="nina9" src="../imagenes/nina.png" onclick=" audio('pista')">
-    <img  class="mundo" src="../imagenes/latierra3.png">   
     <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
-    <div>    
+    <div>
 	<img class="caballoterrestre"  src="../imagenes/caballo.gif">
 </div>
-<div>    
-	<img class="ave"  src="../imagenes/colibriderecha.gif">
-    <img class="ave2"  src="../imagenes/colibri2.gif">
-    <img class="ave"  src="../imagenes/colibriderecha.gif">
-</div>
-<div >    
+
+<div >
 	<img class="terrestres"  src="../imagenes/serpiente.gif">
 </div>
-<div>    
-	<img class="buho9"src="../imagenes/buho2.GIF">
+<div>
+	<img class="buho9"src="../imagenes/buho2.gif">
 </div>
 
-    <div>    
+    <div>
 	<img class="papagayo9"src="../imagenes/papagayo.gif">
 </div>
    <img class="rana9"src="../imagenes/rana.png">
