--- a/app-muiscas/www/rondadecolores/html/estrofa7.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa7.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -13,7 +13,7 @@
 </head>
 
 <body class="fondoestrofa7">
-    
+
 <div class="mensaje">
     <h1> Por favor gire su dispositivo.</h1>
     <a href="../index.html">
@@ -28,11 +28,11 @@
 <a href="estrofa8.html">
 <img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
-<div id="buho" class="iniciop gris">    
-	<img class="buho1" onclick="efectos('buho','finalp'); audio('pista')" src="../imagenes/buho2.GIF">
+<div id="buho" class="iniciop gris">
+	<img class="buho1" onclick="efectos('buho','finalp'); audio('pista')" src="../imagenes/buho2.gif">
 </div>
 
-    
+
 <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
 
 <a href="../rondadecolores.html">
