--- a/app-muiscas/www/rondadecolores/html/estrofa2.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -18,22 +18,22 @@
     <a href="../index.html">
         <h1>Atrás</h1>
     </a>
-</div>    
+</div>
 
 <h1 class="estrofa2">Madre Tierra regálame tus colores <br>para pintar...<br>Al Arcoiris...Cuchaviva</h1>
 
 <a href="estrofa1.html">
 <img  class="icono izquierda" src="../imagenes/iconoatras.png">
 </a>
-    
+
 <a href="estrofa3.html">
 <img  class="icono derecha" src="../imagenes/iconoadelante.png">
 </a>
 
-    <img  class="nina" src="../imagenes/nina.png">
-<img  class="planeta" src="../imagenes/latierra3.png">   
+<img  class="nina" onclick="audio('pista')" src="../imagenes/nina.png">
+<img  class="planeta" src="../imagenes/latierra3.png">
 <img  class="arcoiris" src="../imagenes/arcoiris5.gif">
-    
+
 <a href="../rondadecolores.html">
     <img  class="iconoinicio" src="../imagenes/iconoinicio.gif">
 </a>
