--- a/app-muiscas/www/rondadecolores/rondadecolores.html
+++ b/app-muiscas/www/rondadecolores/rondadecolores.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -20,7 +20,7 @@
 </div>
 
 
-    
+
 <h1 id="lebique1" onclick="efectos('lebique1','lebiquezoom'); audio ('pista');tiempo()" class="lebiqueronda">Lebique</h1>
 
 <audio id="pista" src="audios/lebique.ogg" type="audio/ogg"  ></audio>
@@ -51,7 +51,7 @@
 </a>
 
 <a href="html/estrofa1.html">
-    <img  class="español" src="imagenes/rondadecolores.png">
+    <img  class="espaniol" src="imagenes/rondadecolores.png">
 </a>
 
 </body>
