--- a/app-muiscas/www/index.html
+++ b/app-muiscas/www/index.html
@@ -3,13 +3,39 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1">
+            <!--   Aquí se encuentra el css u js de la animacion deinicio       -->
+        <script src="js/index.js" type="text/javascript"></script>
+        <link rel="stylesheet" media="all and (orientation:portrait)" type="text/css" href="css/presentacion.css">
                     <!-- Esté es el css vertical -->
         <link rel="stylesheet" media="all and (orientation:portrait)" type="text/css" href="css/indexv.css">
                     <!-- Este es el css horizontal -->
         <link rel="stylesheet" media="all and (orientation:landscape)" type="text/css" href="css/indexh.css">
         <title>Cartilla lengua Muisca</title>
     </head>
-    <body>
+    <body onload="tiempo()">
+        <div class="contendor" id="principal">
+        <div class="carrusel" id="mover">
+            <div class="diapo">
+                <img class="logos" src="informacion/bogota.png">
+                <img class="logos" src="informacion/fundacion.png">
+            </div>
+            <div class="diapo">
+                <img class="logos" src="informacion/logocyc.svg">
+                <img class="logos" src="informacion/logoaso.png">
+            </div>
+            <div class="diapo">
+                <img class="logos" src="informacion/logobosa.png">
+                <img class="logos" src="informacion/logosuba.png">
+                <img class="logos" src="informacion/LogoLC.png">
+            </div>
+            <div class="diapo">
+                <img class="logos" src="1.jpeg">
+                <img class="logos" src="2.jpg">
+                <img class="logos" src="3.jpg">
+                <img class="logos" src="4.jpg">
+            </div>
+        </div>
+    </div>
         <div class= "cabecera">
             <p class = "titulos">Cartilla Muysccubun</p>
         </div>
