--- a/app-muiscas/www/informacion/informacion.html
+++ b/app-muiscas/www/informacion/informacion.html
@@ -11,7 +11,7 @@
     </head>
     <body>
 <div class="cabecerainfo">
-    <a href="../index.html">
+    <a href="../inicio.html">
     <img class="atrasmenu" src="../img/atrasmenu.svg">
     </a>
     <h1 class = "titulo">Información</h1>
