--- a/app-muiscas/www/index.html
+++ b/app-muiscas/www/index.html
@@ -1,71 +1,35 @@
 ﻿<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1">
-            <!--   Aquí se encuentra el css u js de la animacion deinicio       -->
-        <script src="js/index.js" type="text/javascript"></script>
-        <link rel="stylesheet" media="all and (orientation:portrait)" type="text/css" href="css/presentacion.css">
-                    <!-- Esté es el css vertical -->
-        <link rel="stylesheet" media="all and (orientation:portrait)" type="text/css" href="css/indexv.css">
-                    <!-- Este es el css horizontal -->
-        <link rel="stylesheet" media="all and (orientation:landscape)" type="text/css" href="css/indexh.css">
-        <title>Cartilla lengua Muisca</title>
-    </head>
-    <body onload="tiempo()">
-        <div class="contendor" id="principal">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1">
+        <!--   Aquí se encuentra el css u js de la animacion deinicio       -->
+    <script src="js/index.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="css/presentacion.css">
+    <title>Cartilla lengua Muisca</title>
+</head>
+<body onload="tiempo()">
+    <div class="contendor" id="principal">
         <div class="carrusel" id="mover">
             <div class="diapo">
-                <img class="logos" src="informacion/bogota.png">
-                <img class="logos" src="informacion/fundacion.png">
+                <h1>Cartilla Muysca</h1>
+                <p>Una Aplicación hecha por la comundad<br>Para la comunidad</p>
+            </div>
+            <div class="diapo log">
+                <img class="bogota" src="informacion/bogota.png">
+                <img class="fuga" src="informacion/fundacion.png">
+            </div>
+            <div class="diapo log">
+                <img class="cyc" src="informacion/logocyc.svg">
+                <img class="aacyc" src="informacion/logoaso.png">
             </div>
             <div class="diapo">
-                <img class="logos" src="informacion/logocyc.svg">
-                <img class="logos" src="informacion/logoaso.png">
-            </div>
-            <div class="diapo">
-                <img class="logos" src="informacion/logobosa.png">
-                <img class="logos" src="informacion/logosuba.png">
-                <img class="logos" src="informacion/LogoLC.png">
-            </div>
-            <div class="diapo">
-                <img class="logos" src="1.jpeg">
-                <img class="logos" src="2.jpg">
-                <img class="logos" src="3.jpg">
-                <img class="logos" src="4.jpg">
+                <img class="bosa" src="informacion/logobosa.png">
+                <img class="suba" src="informacion/logosuba.png">
+                <img class="lc" src="informacion/LogoLC.png">
             </div>
         </div>
     </div>
-        <div class= "cabecera">
-            <p class = "titulos">Cartilla Muysccubun</p>
-        </div>
-
-        <div class= "cuerpo">
-            <div class="botones izquierdos arriba color2">
-                <a class="textoicono" href="saludos/saludos.html">
-                    <img class="icono" src="img/triangulosbn.svg">
-                        <p>Saludos</p>
-                </a>
-            </div>
-            <div class="botones derechos arriba color1">
-                <a class="textoicono" href="rondadecolores/rondadecolores.html">
-                    <img class="icono" src="img/caralineasbn.svg">
-                    <p>Lebique</p>
-                </a>
-            </div>
-            <div class="botones izquierdos abajo color3">
-                <a class="textoicono" href="numeros/numerospr.html">
-                    <img class="icono" src="img/espiralbn.svg">
-                    <p>Números</p>
-                </a>
-            </div>
-            <div class="botones derechos abajo color4">
-                <a class="textoicono" href="informacion/informacion.html">
-                    <img class="icono" src="img/texturadobn.svg">
-                    <p>Información</p>
-                </a>
-            </div>
-        </div>
-    </body>
+</body>
 </html>
 
