--- a/app-muiscas/www/rondadecolores/rondadecolores.html
+++ b/app-muiscas/www/rondadecolores/rondadecolores.html
@@ -14,7 +14,7 @@
 <body class="fondorondadecolores">
 <div class="mensaje">
     <h1> Por favor gire su dispositivo.</h1>
-    <a href="../index.html">
+    <a href="../inicio.html">
         <h1>Atrás</h1>
     </a>
 </div>
@@ -42,7 +42,7 @@
 </a>
 
 
-<a href="../index.html">
+<a href="../inicio.html">
     <img  class="iconoinicio" src="imagenes/iconoinicio.gif">
 </a>
 
