--- a/app-muiscas/www/numeros/numerospr.html
+++ b/app-muiscas/www/numeros/numerospr.html
@@ -20,7 +20,7 @@
             <li class="menuli"><a href="../index.html"> Inicio</a></li>
             <li class="menuli"><a href="../saludos/saludos.html"> Saludos y presentación</a></li>
             <li class="menuli"><a href="../numeros/numerospr.html"> Números</a></li>
-            <li class="menuli"><a href="../rondadecolores/rondadecolores.html"> Ronda de colores</a></li>
+            <li class="menuli"><a href="../rondadecolores/rondadecolores.html"> Lebique</a></li>
             <li class="menuli"><a href="../informacion/informacion.html"> Información</a></li>
         </ul>
     </nav>
