cambios en palabras ibeque cartilla muisca y logo caro y cuervo

--- a/app-muiscas/www/index.html
+++ b/app-muiscas/www/index.html
@@ -6,13 +6,13 @@
         <!--   Aquí se encuentra el css u js de la animacion deinicio       -->
     <script src="js/index.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="css/presentacion.css">
-    <title>Cartilla lengua Muisca</title>
+    <title>Cartilla  Muisca</title>
 </head>
 <body onload="tiempo()">
     <div class="contendor" id="principal">
         <div class="carrusel" id="mover">
             <div class="diapo">
-                <h1>Cartilla Muysca</h1>
+                <h1>Cartilla Muisca</h1>
                 <p>Una Aplicación hecha por la comundad<br>Para la comunidad</p>
             </div>
             <div class="diapo log">
