--- a/app-muiscas/www/informacion/informacion.html
+++ b/app-muiscas/www/informacion/informacion.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -7,7 +7,7 @@
         <link rel="stylesheet" media="all and (orientation:portrait)" type="text/css" href="informacionxv.css">
                     <!-- Este es el css horizontal -->
         <link rel="stylesheet" media="all and (orientation:landscape)" type="text/css" href="informacionxh.css">
-        <title>Cartilla lengua Muisca</title>
+        <title>Cartilla Muisca</title>
     </head>
     <body>
 <div class="cabecerainfo">
@@ -71,7 +71,7 @@
 
 	<div class="cola">
 
-    	<h1>Colaboradores en el desarollo de la aplicación cartilla muysccubun</h1>
+    	<h1>Colaboradores en el desarollo de la aplicación cartilla muisca</h1>
     	<p>Nataly  Bulla, Sara Cabiativa, Andrés Bulla, María Angélica 	Cabiativa, Natalia Caita, Andrés Guerrero, Sarah Arévalo, Diana Garibello, Carlos Herrera, Rosa Chisaba, Mabel Niviayo, Mayra Andrea, Yenny Cardozo, Miguel Maecha, David Yopasa, Diego Gómez, Jorge Yopasa Cardenas, Miguel Yopasa, Ivan Niviayo, Gonzalo Cabiativa, Carlos Andrés Rocha, Carlos Alfoso Cobadela, Luz Adriana Murcia</p>
 
 </div>
@@ -82,6 +82,7 @@
     <img class="iconoinf" src="bogota.png">
     <img class="iconoinf" src="fundacion.png">
      <img class="iconoinf" src="logoaso.png">
+    <img class="iconoinf" src="logocyc.svg">
 </div>
 <div>
     <h1>Licencias</h1>
@@ -94,3 +95,4 @@
 <b>31 de marzo del 2016</b>
 </body>
 </html>
+ oc
