--- a/app-muiscas/www/inicio.html
+++ b/app-muiscas/www/inicio.html
@@ -12,7 +12,7 @@
     <body>
     </div>
         <div class= "cabecera">
-            <p class = "titulos">Cartilla Muysca</p>
+            <p class = "titulos">Cartilla Muisca</p>
         </div>
 
         <div class= "cuerpo">
@@ -25,7 +25,7 @@
             <div class="botones derechos arriba color1">
                 <a class="textoicono" href="rondadecolores/rondadecolores.html">
                     <img class="icono" src="img/caralineasbn.svg">
-                    <p>Lebique</p>
+                    <p>Iebique</p>
                 </a>
             </div>
             <div class="botones izquierdos abajo color3">
