--- a/app-muiscas/www/saludos/saludos.html
+++ b/app-muiscas/www/saludos/saludos.html
@@ -17,11 +17,11 @@
 <!--  menu    -->
 <nav id="menu" class="invisible">
     <ul>
-        <li class="titulomenu">Cartilla<br>Muysccubun<img onclick="menuc()" class="menuatras" src="../img/atrasmenu.svg"/></li>
+        <li class="titulomenu">Cartilla<br>MuISCA<img onclick="menuc()" class="menuatras" src="../img/atrasmenu.svg"/></li>
         <li class="menuli"><a href="../inicio.html"> Inicio</a></li>
         <li class="menuli"><a href="../saludos/saludos.html"> Saludos y presentación</a></li>
         <li class="menuli"><a href="../numeros/numerospr.html">Números</a></li>
-        <li class="menuli"><a href="../rondadecolores/rondadecolores.html"> Lebique</a></li>
+        <li class="menuli"><a href="../rondadecolores/rondadecolores.html"> Iebique</a></li>
         <li class="menuli"><a href="../informacion/informacion.html"> Información</a></li>
     </ul>
 </nav>
