cambios en palabras ibeque cartilla muisca y logo caro y cuervo

--- a/app-muiscas/www/informacion/informacion.html
+++ b/app-muiscas/www/informacion/informacion.html
@@ -82,7 +82,7 @@
     <img class="iconoinf" src="bogota.png">
     <img class="iconoinf" src="fundacion.png">
      <img class="iconoinf" src="logoaso.png">
-    <img class="iconoinf" src="logocyc.svg">
+    <img class="iconocaroycuervo" src="logocyc.svg">
 </div>
 <div>
     <h1>Licencias</h1>
@@ -95,4 +95,3 @@
 <b>31 de marzo del 2016</b>
 </body>
 </html>
- oc
