--- a/app-muiscas/www/saludos/saludos.html
+++ b/app-muiscas/www/saludos/saludos.html
@@ -17,7 +17,7 @@
 <!--  menu    -->
 <nav id="menu" class="invisible">
     <ul>
-        <li class="titulomenu">Cartilla<br>MuISCA<img onclick="menuc()" class="menuatras" src="../img/atrasmenu.svg"/></li>
+        <li class="titulomenu">Cartilla<br>Muisca<img onclick="menuc()" class="menuatras" src="../img/atrasmenu.svg"/></li>
         <li class="menuli"><a href="../inicio.html"> Inicio</a></li>
         <li class="menuli"><a href="../saludos/saludos.html"> Saludos y presentación</a></li>
         <li class="menuli"><a href="../numeros/numerospr.html">Números</a></li>
