--- a/app-muiscas/www/rondadecolores/html/estrofa6.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa6.html
@@ -16,7 +16,7 @@
     
 <div class="mensaje">
     <h1> Por favor gire su dispositivo.</h1>
-    <a href="../inicio.html">
+    <a href="../../inicio.html">
         <h1>Atrás</h1>
     </a>
 </div>
