--- a/app-muiscas/www/rondadecolores/html/estrofa2.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa2.html
@@ -15,7 +15,7 @@
 <body class="fondoestrofa2" >
 <div class="mensaje">
     <h1> Por favor gire su dispositivo.</h1>
-    <a href="../../index.html">
+    <a href="../../inicio.html">
         <h1>Atrás</h1>
     </a>
 </div>
