arreglo final icono caro y cuervo

--- a/app-muiscas/www/informacion/informacion.html
+++ b/app-muiscas/www/informacion/informacion.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -84,6 +84,7 @@
      <img class="iconoinf" src="logoaso.png">
     <img class="iconocaroycuervo" src="logocyc.svg">
 </div>
+<br>
 <div>
     <h1>Licencias</h1>
     <h3>Para los textos, material gráfico y creaciones hechas por la comunidad para esta aplicación</h3>
