errores menores correguidos

--- a/app-muiscas/www/index.html
+++ b/app-muiscas/www/index.html
@@ -13,7 +13,7 @@
         <div class="carrusel" id="mover">
             <div class="diapo">
                 <h1>Cartilla Muisca</h1>
-                <p>Una Aplicación hecha por la comundad<br>Para la comunidad</p>
+                <p>Una Aplicación hecha por la comunidad<br>Para la comunidad</p>
             </div>
             <div class="diapo log">
                 <img class="bogota" src="informacion/bogota.png">
